<resources>
    <string name="app_name">Jeep0 Dev Build</string>
    <string name="menu">menu</string>
    <string name="your_destination">Your Destination</string>
    <string name="fare">fare</string>
    <string name="input_location">Your Location</string>
    <string name="code">code</string>
    <string name="km">km</string>
    <string name="use_gps">Use GPS</string>
    <string name="routes">Routes</string>
    <string name="to_be_shown">To be displayed</string>
    <string name="jeepo">Jeep</string>
    <string name="enter_initial_location">Enter Initial Location</string>
    <string name="enter_desired_location">Enter Desired Location</string>
    <string name="hamburger_icon">hamburgerIcon</string>
    <string name="back_button">back_button</string>
    <string name="travel_history">Travel History</string>
    <string name="code_text">Code</string>
    <string name="km_text">KM</string>
    <string name="fare_text">Fare</string>
    <string name="initial_to_destination">Initial to destination</string>
    <string name="code_input">Code</string>
    <string name="km_input">100\n</string>
    <string name="_15">15</string>
    <string name="route_date">Route Date</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="open_map">Open Map</string>
    <string name="suggested_routes">Suggested Routes</string>
    <string name="code_text1">Code</string>
    <string name="pin_instruction">pin instruction</string>
    <string name="selected_route">Selected Route</string>
    <string name="history">History</string>
    <string name="jeepoy_logo">jeepoy_logo</string>
    <string name="map_view">map view</string>
    <string name="start_travel">start_travel</string>
    <string name="fare_calculator">fare_calculator</string>
    <string name="jeepney_list">jeepney_list</string>
    <string name="jeepo_background">jeepo_background</string>
    <string name="enter_distance">Enter Distance</string>
    <string name="calculate_fare">Calculate Fare</string>
    <string name="location">Location:</string>
    <string name="destination">Destination:</string>
    <string name="route_history">Route History</string>
</resources>